Bug #8055
closedmr_sas online-controller-reset (OCR) does not work with some gen3 adapters.
100%
Description
The mr_sas OCR routine can be triggered under high I/O load (determining why that happens is a separate issue!) but on LSI3108 adaptors it fails, resulting in the adaptor being marked as bad and a subsequent panic.
Modifying the OCR code to perform the same reset process as in the FreeBSD driver resolves this problem and has been successfully tested with the following cards:
LSI Logic / Symbios Logic MegaRAID SAS 2208 [Thunderbolt] (rev 05)
LSI Logic / Symbios Logic MegaRAID SAS-3 3108 [Invader] (rev 02)
There is only one other thunderbolt card currently supported by the driver, the LSI Fury, which I am not in a position to test but is treated in the same way as Invader in the FreeBSD driver.
Updated by Electric Monk about 5 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit eef6dbdfddc0c59fd812f04dd0521e8356b617e5
commit eef6dbdfddc0c59fd812f04dd0521e8356b617e5 Author: Andy Fiddaman <omnios@citrus-it.net> Date: 2017-06-02T21:18:15.000Z 8055 mr_sas online-controller-reset (OCR) does not work with some gen3 adapters. Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Jason King <jason.brian.king@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>