8055 mr_sas online-controller-reset (OCR) does not work with some gen3 adapters. Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Jason King <jason.brian.king@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>